force-app/main/default/objects/AdminSettings__c/AdminSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Admin Settings</label>
</CustomObject>