force-app/main/default/objects/AdminSettings__c/fields/CBK_SnapshotExecutionLimit__c.field-meta.xml
<CustomField>
    <fullName>CBK_SnapshotExecutionLimit__c</fullName>
    <description>Límite control para indicar el número de transacciones máximas a consumir por el CBK_Log</description>
    <label>Snapshot Execution Limit</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>