force-app/main/default/objects/AdminSettings__c/fields/LogDEBUG__c.field-meta.xml
<CustomField>
    <fullName>LogDEBUG__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LogDEBUG</label>
    <type>Checkbox</type>
</CustomField>