force-app/main/default/objects/AdminSettings__c/fields/LogINFO__c.field-meta.xml
<CustomField>
    <fullName>LogINFO__c</fullName>
    <defaultValue>true</defaultValue>
    <label>LogINFO</label>
    <type>Checkbox</type>
</CustomField>