force-app/main/default/objects/AdminSettings__c/fields/LogViaEvents__c.field-meta.xml
<CustomField>
    <fullName>LogViaEvents__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Habilitar el framework de login</description>
    <label>LogViaEvents</label>
    <type>Checkbox</type>
</CustomField>