force-app/main/default/objects/AdminSettings__c/fields/ScheduleJob__c.field-meta.xml
<CustomField>
    <fullName>ScheduleJob__c</fullName>
    <description>Framework de BACTH APEX JOBS: minutos entre planificaciones del CORE</description>
    <label>ScheduleJob</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>