force-app/main/default/objects/AdminSettings__c/fields/Validaciones__c.field-meta.xml
<CustomField>
    <fullName>Validaciones__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Desmarcando deshabilita las validation rules en las que se especifique</description>
    <label>Validaciones</label>
    <type>Checkbox</type>
</CustomField>